and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Fixed
- [API_PARSER] [CROWDSTRIKE] last_api_call was not properly updated
- [SYSTEM] [CERTIFICATES] Ensure correct rights and ownerships to imported node's certificate files
- [CLUSTER] [CLUSTER_JOIN] Numerous improvements to cluster_join script, for both new node and called master
### Added
- [OAUTH] Add 'Access-Control-Allow-Origin' header to oauth2 endpoints for API requests through SPAs


## [2.1.4] - 2022-11-18
### Fixed
- [IDP] [API] Don't fail on token updates with explicit expire_at
- [API_PARSER] [IMPERVA] Use requests' auth object instead of manually created Authorization header
- [API_PARSER] [IMPERVA] Typo in logger made the process crash
- [API_PARSER] [SYMANTEC] Correctly extracting token from downloaded archive 
- [SSO_FORWARD] Missing variable in logger
- [PORTAL] Various logger levels and message corrections
### Removed
- [API_PARSER] [ELASTICSEARCH] Obsolete/non-working parser


## [2.1.3] - 2022-11-09
### Fixed
- [API_PARSER] [IMPERVA] Prevent infinite download loop when a file cannot be decoded
- [API_PARSER] [SYMANTEC] Fix retrieve of token from downloaded archive tail
### Added
- [API_PARSER] [CROWDSTRIKE] Add api_host to 'url' event log field


## [2.1.2] - 2022-10-27
### Changed
- [INTERNAL] [REDIS_SESSIONS] Allow key's expiration to be set using a datetime object
- [IDP] [API] token's APIs now take an 'expire_at' parameter instead of a 'timeout' parameter
### Fixed
- [API_PARSER] [SOPHOS_CLOUD] Api return 400 http_code if trying to fetch more than 24h
- [API_PARSER] [IMPERVA] Download multiple files at once, to prevent delay increasing
- [API_PARSER] [SYMANTEC]  Don't use token if it's older than 24h, seems to be expired
- [API_PARSER] [CROWDSTRIKE] Prevent last_api_call stagnation if no events where retrieved during the last 24h


## [2.1.1] - 2022-10-19
### Fixed
- [PORTAL] [SSO] SSO could fail when portal have no oauth2 activated